[package]
name = "ovp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OVP Next CLI"

[[bin]]
name = "ovp-next"
path = "src/main.rs"

[features]
default = []
# Forwards to ovp-llm/anthropic so `ovp-next interpret-article/run-cycle --client
# live` can make real *LLM* API calls. The LLM transport stays feature-gated and
# OFF by default. NOTE: the binary is NOT HTTP-free regardless — `compare-run`
# (via ovp-eval) links reqwest to reach the external Nowledge Mem service. That
# HTTP is the M8 comparator's purpose, distinct from the gated LLM transport;
# neither is exercised by a normal offline run.
anthropic = ["ovp-llm/anthropic"]

[dependencies]
ovp-core = { path = "../ovp-core", features = ["fakes"] }
ovp-domain = { path = "../ovp-domain" }
ovp-llm = { path = "../ovp-llm" }
ovp-stores = { path = "../ovp-stores" }
ovp-app = { path = "../ovp-app" }
ovp-run = { path = "../ovp-run" }
ovp-query = { path = "../ovp-query" }
ovp-lint = { path = "../ovp-lint" }
ovp-rag = { path = "../ovp-rag" }
ovp-auto = { path = "../ovp-auto" }
ovp-review = { path = "../ovp-review" }
ovp-eval = { path = "../ovp-eval" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
