[package]
name = "ovp-review"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OVP Next M7: E2E review harness — runs the L4 cycle and reads it back through L5/L6 into a deterministic, human-inspectable review pack. Read/orchestrate only."

[dependencies]
ovp-core = { path = "../ovp-core" }
# `testing` enables ovp-domain's contract-assertion engine so the comparison
# step can defer to it instead of hand-rolling a verdict on the produced note.
# Tradeoff: this compiles that engine into the production `ovp-next` binary
# (ovp-cli → ovp-review → ovp-domain). Accepted deliberately — review-run is a
# first-class diagnostic command, the engine is the right (and only) tool for a
# contract verdict, and it pulls in no extra external dependencies.
ovp-domain = { path = "../ovp-domain", features = ["testing"] }
ovp-app = { path = "../ovp-app" }
ovp-run = { path = "../ovp-run" }
ovp-query = { path = "../ovp-query" }
ovp-lint = { path = "../ovp-lint" }
ovp-rag = { path = "../ovp-rag" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
# Tests build their own replay-only cassette client (the harness itself never
# constructs a client — the caller supplies the wiring).
ovp-llm = { path = "../ovp-llm" }
tempfile = { workspace = true }
